--- a/docs/package.json
+++ b/docs/package.json
@@ -24,45 +24,45 @@
     "contentlayer": "^0.3.4",
     "date-fns": "^3.6.0",
     "focus-trap-react": "^10.2.3",
-    "framer-motion": "^11.0.28",
+    "framer-motion": "^11.1.7",
     "http-status": "^1.7.4",
-    "i18next": "^23.11.1",
+    "i18next": "^23.11.2",
     "i18next-browser-languagedetector": "^7.2.1",
     "i18next-resources-to-backend": "^1.2.1",
     "joi": "^17.12.3",
     "lodash": "^4.17.21",
-    "lucide-react": "^0.368.0",
+    "lucide-react": "^0.372.0",
     "ms": "^2.1.3",
     "muse-ui": "^4.0.0-alpha.1",
-    "next": "^14.1.4",
+    "next": "14.1.4",
     "next-contentlayer": "^0.3.4",
     "next-themes": "^0.3.0",
     "nextjs-toploader": "^1.6.11",
-    "query-string": "^7.1.3",
+    "query-string": "7.1.3",
     "react": "^18.2.0",
     "react-cropper": "^2.3.3",
     "react-datalist-input": "^3.2.1",
-    "react-day-picker": "^8.10.0",
-    "react-big-calendar": "^1.11.3",
+    "react-day-picker": "^8.10.1",
+    "react-big-calendar": "^1.11.6",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.51.2",
+    "react-hook-form": "^7.51.3",
     "react-i18next": "^14.1.0",
-    "react-icons": "^5.0.1",
+    "react-icons": "^5.1.0",
     "react-markdown": "^9.0.1",
     "react-rough-notation": "^1.0.5",
     "react-wrap-balancer": "^1.1.0",
     "rehype-slug": "^6.0.0",
-    "tailwind-merge": "^2.2.2",
+    "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "tsparticles": "^3.3.0",
     "use-debounce": "^10.0.0",
     "uuid": "^9.0.1",
     "vaul": "^0.9.0",
-    "zod": "^3.22.4"
+    "zod": "^3.22.5"
   },
   "devDependencies": {
-    "@commitlint/cli": "^19.2.1",
-    "@commitlint/config-conventional": "^19.1.0",
+    "@commitlint/cli": "^19.2.2",
+    "@commitlint/config-conventional": "^19.2.2",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/typography": "^0.5.12",
@@ -74,24 +74,24 @@
     "@types/react-dom": "^18.2.25",
     "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.4.19",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "^14.1.4",
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.1.4",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.13",
+    "prettier-plugin-tailwindcss": "^0.5.14",
     "prop-types": "^15.8.1",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
   },
   "overrides": {
     "muse-ui": {
-      "react-hook-form": "^7.51.2"
+      "react-hook-form": "^7.51.3"
     }
   },
   "engines": {
     "node": "^18"
   },
-  "packageManager": "pnpm@8.15.7"
+  "packageManager": "pnpm@9.0.4"
 }
