--- a/renovate.json
+++ b/renovate.json
@@ -17,6 +17,10 @@
     {
       "matchPackageNames": ["slang_flutter", "slang_build_runner"],
       "groupName": "slang"
+    },
+    {
+      "matchPackageNames": ["sentry_flutter", "sentry_logging"],
+      "groupName": "sentry"
     }
   ]
 }
